--- a/no3.html
+++ b/no3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
+    <title>Do you love me?</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -30,8 +30,7 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>No Jokes! How Much Feelings You will eat 😭</h1>
-      <p> this is very wrong 😭</p>
+      <h1>No Jokes! This is very wrong 😭</h1><br>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
